<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="E_WriteStep" Id="{16e812ee-dab1-4da6-a6de-e6d899740546}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_WriteStep :
(
	Stay,
	GripperOpen,
	ZAxixZeroPotision,
	XYAxixZeroPotision,
	PenGripp,
	Write,
	ZAxixZeroPotision2,
	XYAxixZeroPotision2,
	PenRelease,
	
	//McFb停止時用
	CommandAborted,
	Error,
	Reset
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>